--- a/src/components/Windows/window.scss
+++ b/src/components/Windows/window.scss
@@ -78,6 +78,7 @@
   .main-content {
     flex-grow: 1;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: rgba(0, 0, 0, 0.2);
     min-height: 0;
   }
